--- a/package.json
+++ b/package.json
@@ -79,10 +79,10 @@
         "picocolors": "^1.0.0",
         "postcss-loader": "^7.3.3",
         "postcss-scss": "^4.0.9",
-        "react": "^18.2.0",
+        "react": "19.2.3",
         "react-compiler-runtime": "^19.0.0-beta-decd7b8-20250118",
-        "react-dom": "^18.2.0",
-        "react-redux": "^8.1.3",
+        "react-dom": "19.2.3",
+        "react-redux": "^9.2.0",
         "react-refresh": "^0.14.0",
         "react-router-dom": "^6.16.0",
         "redux": "^4.2.1",
