--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
         "@loadable/webpack-plugin": "^5.15.2",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
         "@svgr/webpack": "^8.1.0",
-        "@tata1mg/router": "0.0.1-beta.7",
+        "@tata1mg/router": "0.1.0-beta",
         "app-root-path": "^3.1.0",
         "babel-loader": "^9.1.3",
         "babel-plugin-react-compiler": "^19.0.0-beta-decd7b8-20250118",
