--- a/package.json
+++ b/package.json
@@ -119,5 +119,8 @@
             "eslint .",
             "prettier . --write"
         ]
-    }
+    },
+    "workspaces": [
+        "packages/*"
+    ]
 }
