chore: upgrade react/react-dom to 19.2.3

--- a/package.json
+++ b/package.json
@@ -101,6 +101,10 @@
         "winston": "^3.11.0",
         "winston-daily-rotate-file": "^5.0.0"
     },
+    "peerDependencies": {
+        "react": "^19.2.3",
+        "react-dom": "^19.2.3"
+    },
     "devDependencies": {
         "@babel/eslint-parser": "^7.19.1",
         "@commitlint/cli": "^19.3.0",
