fix: babel config

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@babel/preset-react": "^7.22.15",
         "@babel/preset-typescript": "^7.24.7",
         "@babel/register": "^7.22.15",
+        "@babel/runtime": "^7.28.6",
         "@dr.pogodin/css-modules-require-hook": "^4.7.3",
         "@loadable/babel-plugin": "^5.16.1",
         "@loadable/component": "^5.15.3",
@@ -79,9 +80,9 @@
         "picocolors": "^1.0.0",
         "postcss-loader": "^7.3.3",
         "postcss-scss": "^4.0.9",
-        "react": "19.2.4",
+        "react": "^19.2.4",
         "react-compiler-runtime": "^19.0.0-beta-decd7b8-20250118",
-        "react-dom": "19.2.4",
+        "react-dom": "^19.2.4",
         "react-redux": "^9.2.0",
         "react-refresh": "^0.14.0",
         "react-router-dom": "^6.16.0",
@@ -107,6 +108,7 @@
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.19.1",
+        "@babel/plugin-transform-runtime": "^7.29.0",
         "@commitlint/cli": "^19.3.0",
         "@commitlint/config-conventional": "^19.2.2",
         "eslint": "^8.26.0",
