--- a/src/native/iosnativeWebView/iosnativeWebView/Info.plist
+++ b/src/native/iosnativeWebView/iosnativeWebView/Info.plist
@@ -13,6 +13,8 @@
     <string>This app requires camera access to capture images</string>
     <key>NSPhotoLibraryUsageDescription</key>
     <string>This app requires photo library access to select images from your gallery</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>This app needs your location to provide location-based services</string>
     <key>NSUserNotificationUsageDescription</key>
     <string>This app needs notification permission to send you important updates</string>
     <key>NSLocalNotificationUsageDescription</key>
