--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "express": "^4.18.2",
         "express-static-gzip": "^2.1.7",
         "picocolors": "^1.0.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
         "react-helmet-async": "^1.3.0",
         "react-redux": "^8.1.3",
         "react-refresh": "^0.14.0",
@@ -41,9 +43,7 @@
         "sanitize-html": "^2.13.1",
         "sass": "^1.89.2",
         "ua-parser-js": "^1.0.37",
-        "vite": "^6.3.5",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "vite": "^6.3.5"
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.19.1",
